app.config 값 변경

--- a/DBScripter/App.config
+++ b/DBScripter/App.config
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="ezCommon_RootLogPath" value="C:\\KAONI_TEMPORARY\\DBScripter" />
+    <add key="ezCommon_RootLogPath" value="C:\\DBScripter" />
     
     <!--스크립트 파일 생성 위치-->
     <add key="backupPath" value="C:\\DBScript" />
     
     <!--Server connection info-->
-    <add key="server" value="10.0.102.21\INS02" />
-    <add key="uid" value="gwUser" />
-    <add key="pwd" value="ezflow2000" />
+    <add key="server" value="MS-SQL connection string value" />
+    <add key="uid" value="userID" />
+    <add key="pwd" value="userPassword" />
     
     <!--특정 DB만 스크립트 - 공백 : 모든 DB-->
     <add key="targetDB" value="" />
@@ -21,7 +21,7 @@
     <add key="gitlabToken" value="glpat-yFxFvp-iEe1xuQktMxwr" />
   </appSettings>
   <connectionStrings>
-    <add name="master" connectionString="server=10.0.102.21\INS02;uid=gwUser;pwd=ezflow2000;database=master" />
+    <add name="master" connectionString="server=ipAddress;uid=userID;pwd=userPassword;database=master" />
   </connectionStrings>
   
     <startup> 
